# typespec-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rustsec.toml
.claude/: ralph-loop.local.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
crates/tspc/: Cargo.toml  README.md
crates/tspc/src/: main.rs  pipeline.rs  type_serializer.rs  wasm_host.rs
crates/tspc/tests/: pipeline_tests.rs
docs/superpowers/plans/: 2026-04-06-typespec-porting-plan.md
examples/: model_examples.rs  parse_and_inspect.rs  petstore.rs  quick_start.rs
examples/tsp_to_json/: parse_and_emit.rs
src/: casing.rs  charcode.rs  code_fixes.rs  deprecation.rs  diagnostics.rs  intrinsic_type_state.rs  lib.rs  linter.rs  mime_type.rs  modifiers.rs  numeric.rs  numeric_ranges.rs  param_message.rs  path_utils.rs  perf.rs  semantic_walker.rs  source_file.rs  state_accessors.rs  stats.rs  text_utils.rs
src/ast/: mod.rs  node.rs  token.rs  types.rs  visitor.rs
src/checker/: alias_tests.rs  augment_decorator_tests.rs  check_alias.rs  check_augment.rs  check_clone.rs  check_declarations.rs  check_decorators.rs  check_directives.rs  check_enum.rs  check_expressions.rs  check_helpers.rs  check_interface.rs  check_literals.rs  check_model.rs  check_namespace.rs  check_namespace_helpers.rs  check_operation.rs  check_parse_errors_tests.rs  check_program_flow.rs  check_reference_resolution.rs  check_scalar.rs  check_spread.rs  check_stdlib.rs  check_template.rs  check_template_instantiation.rs  check_union.rs  check_visibility.rs  circular_ref_tests.rs  clone_type_tests.rs  decorator_utils.rs  decorators_tests.rs  deprecation_tests.rs  doc_comment_tests.rs  duplicate_ids_tests.rs  effective_type_tests.rs  enum_tests.rs  functions_tests.rs  global_ns_tests.rs  imports_tests.rs  internal_tests.rs  (+25 more)
src/emit/: emitter.rs  json_emitter.rs  mod.rs  openapi_emitter.rs  yaml_emitter.rs
src/helpers/: discriminator_utils.rs  location_context.rs  mod.rs  operation_utils.rs  path_interpolation.rs  raw_text_cache.rs  string_template_utils.rs  syntax_utils.rs  type_name_utils.rs  usage_resolver.rs
src/libs/: content_types.rs  decorator_macros.rs  events.rs  json_schema.rs  mod.rs  openapi.rs  openapi3.rs  protobuf.rs  rest.rs  sse.rs  status_codes.rs  streams.rs  uri_template.rs  versioning.rs  xml.rs
src/libs/compiler/: encoded_names.rs  mod.rs  paging.rs  tsp_sources.rs  types.rs  utils.rs  visibility.rs
src/loader/: mod.rs
src/parser/: ast_builder.rs  mod.rs  parser_utils.rs  string_template_tests.rs  tests.rs
src/program/: mod.rs
src/resolver/: mod.rs
src/scanner/: lexer.rs  mod.rs  nonascii.rs  tests.rs
src/std/: decorator_registry.rs  helpers.rs  mod.rs  primitives.rs
src/typekit/: mod.rs
src/types/: builder.rs  checker.rs  decorator.rs  enum.rs  interface.rs  mod.rs  model.rs  namespace.rs  operation.rs  primitive.rs  union.rs
src/utils/: mod.rs
src/visibility/: mod.rs
tests/: e2e_test.rs  integration_test.rs
tests/typespec-samples/: hero-petstore.tsp  http-widget.tsp  json-schema.tsp  kiosk.tsp  petstore-swagger.tsp  polymorphism.tsp  unions.tsp
(+37 files in other folders)
