[package]
name = "tspc"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "TypeSpec compiler CLI — convert .tsp files to JSON, YAML, OpenAPI and more"
repository = "https://github.com/ejfkdev/typespec-rs"
homepage = "https://github.com/ejfkdev/typespec-rs"
license = "MIT"
readme = "README.md"
keywords = ["typespec", "cli", "compiler", "api", "openapi"]
categories = ["command-line-utilities", "development-tools", "compilers"]

[[bin]]
name = "tspc"
path = "src/main.rs"

[dependencies]
typespec_rs = { version = "0.1.0", path = "../.." }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
wasm-extensions = ["dep:wasmtime"]

[dependencies.wasmtime]
version = "28"
optional = true
